--- a/package.json
+++ b/package.json
@@ -6,15 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "production": "npm run build && npm run start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "js-cookie": "^3.0.0",
     "next": "11.1.0",
+    "nextjs-progressbar": "0.0.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-persist-cookie-storage": "^1.0.0",
+    "redux-thunk": "^2.3.0",
+    "simple-react-validator": "^1.6.1",
+    "socket.io-client": "^4.1.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.3",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.8"
   }
 }
