--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux-persist-cookie-storage": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "simple-react-validator": "^1.6.1",
-    "socket.io-client": "^4.1.3"
+    "socket.io-client": "^4.1.3",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
