--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "js-cookie": "^3.0.0",
     "next": "11.1.0",
     "nextjs-progressbar": "0.0.11",
+    "rc-pagination": "^3.1.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
+    "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
